# kpop_horses_game

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
crates/face_gen/: Cargo.toml
crates/face_gen/src/: demon.rs  eyes.rs  face.rs  hair.rs  horse_body.rs  horse_mane.rs  horse_tack.rs  horse_tail.rs  lib.rs  main.rs  mouth.rs  render.rs
docs/: bevy_reference.md
specs/: game_design.md
src/: main.rs
src/assets/: mipmaps.rs  mod.rs  palette.rs
src/assets/audio/: mod.rs
src/game/: effects.rs  mod.rs
src/game/character_creator/: mod.rs
src/game/demon_hunt/: mod.rs
src/game/game_select/: mod.rs
src/game/horse_brushing/: mod.rs
src/game/treat_toss/: mod.rs
