[package]
name = "kpop_horse"
version = "0.1.0"
edition = "2024"

[lib]
name = "kpop_horse"

[workspace]
resolver = "2"
members = ["crates/face_gen"]

[dependencies]
bevy = "0.18.1"
face_gen = { path = "crates/face_gen" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
dev_console = []
